--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,8 +1,23 @@
-
 a.navbar-brand, a.active {
     color: black;
 }
 
 a.active {
     margin-right: 50px;
+    margin-top: 15px;
+    padding-top: 35px;
+}
+
+button.contact-btn {
+    background-color: black;
+    padding: 5px 25px;
+    display: inline-block;
+    border-radius: 16px;
+    @media (max-width: 767.98px) {
+        background-color: white;
+        color: black;
+        padding: 0;
+        border: none;
+        border-radius: 0;
+    }
 }
