--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,3 +1,13 @@
+$pink: #FF5851;
+
+/****** Header *****/
+p {
+    @media (max-width: 767.98px) {
+        font-size: 17px;
+    }
+}
+
+
 body {
     border: 50px solid white;
     background-color: #F8F8F8;
@@ -6,6 +16,14 @@ body {
     @media (max-width: 767.98px) {
         border: none;
     }
+}
+
+.homepage {
+    background-color: #F8F8F8;
+}
+
+h1, h2 {
+    font-family: 'Secular One', sans-serif;
 }
 
 
@@ -55,9 +73,40 @@ body {
 }
 
 .intro {
-    font-size: 22px;
+    font-size: 25px;
     max-width: 400px;
-    @media (max-width: 575.98px) {
+    @media (max-width: 767.98px) {
         font-size: 17px;
     }
+}
+
+/***** About Me *****/
+.about-container {
+    margin-top: 10%;
+    padding-bottom: 10%;
+}
+
+.about-text {
+    font-size: 120px;
+    @media (max-width: 767.98px) {
+        font-size: 80px;
+    }
+}
+
+
+.about-period {
+    color: $pink;
+}
+
+.venn {
+    height: 300px;
+    width: 300px;
+    @media (max-width: 767.98px) {
+        height: 200px;
+        width: 200px;
+    }
+}
+
+.squiggle {
+    margin-left: 25px;
 }
