--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -98,8 +98,8 @@ h1, h2 {
 }
 
 .venn {
-    height: 350px;
-    width: 350px;
+    height: 370px;
+    width: 370px;
     @media (max-width: 767.98px) {
         height: 200px;
         width: 200px;
@@ -138,6 +138,7 @@ h1, h2 {
 .skills-list {
     background-color: black;
     width: 100%;
+    padding: 6%;
 }
 
 .skills-intro {
