--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -2,18 +2,22 @@ $thick: 'Secular One', sans-serif;
 
 html, body {
     border: none;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
 }
 
 .cssa-class {
-    font-size: 15px;
+    font-size: 16px;
+    color: white;
     .main-row {
         height: 100vh;
     }
     .info {
         padding-top: 15px;
         background-color: #263477;
-        span {
+        .lang {
             color: rgba(255, 255, 255, .53);
+            text-align: center;
         }
         h1 {
             padding-top: 15%;
@@ -25,6 +29,18 @@ html, body {
             color: rgba(255, 255, 255, .53);
             font-style: italic;
             font-size: 12px;
+        }
+        h2 {
+            font-size: 18px;
+        }
+        .overview {
+            width: 400px;
+        }
+        .btn {
+            background-color: #F5D33E;
+            a {
+                color: white;
+            }
         }
     }
 }
