--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -3,7 +3,6 @@ $thick: 'Secular One', sans-serif;
 html, body {
     border: none;
     font-family: 'Quicksand', sans-serif;
-    font-size: 14px;
 }
 
 .cssa-class {
@@ -46,11 +45,40 @@ html, body {
 }
 
 .medpius-class {
+    font-size: 16px;
+    color: white;
     .main-row {
         height: 100vh;
     }
     .info {
         padding-top: 15px;
         background-color: #F5D33E;
+        .lang {
+            color: rgba(255, 255, 255, .53);
+            text-align: center;
+        }
+        h1 {
+            padding-top: 15%;
+            margin-bottom: 0;
+            color: #1E7FC6;
+            font-size: 20px;
+        }
+        .date {
+            color: rgba(255, 255, 255, .53);
+            font-style: italic;
+            font-size: 12px;
+        }
+        h2 {
+            font-size: 18px;
+        }
+        .overview {
+            width: 400px;
+        }
+        .btn {
+            background-color: #1E7FC6;
+            a {
+                color: white;
+            }
+        }
     }
 }
