--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -38,22 +38,17 @@ button.contact-btn {
             color: $orange;
         }
         @media (max-width: 767.98px) {
-            background-color: white;
-            color: black;
+            background-color: $dark;
             padding: 0;
-            border: none;
-            border-radius: 0;
         }
     }
     @media (max-width: 767.98px) {
-        background-color: white;
-        color: black;
-        padding: 0;
-        border: none;
-        border-radius: 0;
+        background-color: $dark;
+        padding: 5px 7px;
     }
 }
 
 .navigation {
     background-color: $dark;
+    position: sticky;
 }
