--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -89,6 +89,45 @@ $box: #1D3152;
 /**** Experience *****/
 .experience {
     margin-top: 15%;
+    .tabs {
+        margin-top: 5%;
+        a.nav-link {
+            color: #6375a8;
+            border: none;
+            text-align: center;
+            cursor: pointer;
+            padding: 10px 0;
+            width: 200px;
+            margin-right: 0;
+        }
+        a.active.nav-link {
+            color: $code;
+            background-color: #334880;
+            padding: 10px 0;
+            margin: 0;
+            text-align: center;
+            margin-right: 0;
+        }
+        .tab-pane {
+            h5 {
+                color: $white;
+                margin-bottom: 0;
+            }
+            .date {
+                opacity: .9;
+                font-size: .8rem;
+            }
+            .asterik {
+                margin-right: 10px;
+            }
+        }
+        .nav {
+            @media (max-width: 767.98px) {
+                align-items: center;
+                margin: 5% 0;
+            }
+        }
+    }
 }
 
 /*** Projects ****/
