--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,6 +34,10 @@ h1, h2, h3 {
     color: $code;
 }
 
+.code-color {
+    color: $code;
+}
+
 .line {
     margin-left: 5px;
     @media (max-width: 767.98px) {
