money wise updates

--- a/src/styles/moneywise.scss
+++ b/src/styles/moneywise.scss
@@ -82,6 +82,10 @@ $box: #1D3152;
     p {
         max-width: 90%;
     }
+    img.github {
+        width: 40px;
+        height: 40px;
+    }
     .sub {
         margin-top: 8%;
     }
