--- a/src/styles/moneywise.scss
+++ b/src/styles/moneywise.scss
@@ -86,6 +86,11 @@ $box: #1D3152;
         width: 40px;
         height: 40px;
     }
+    img.screen {
+        height: 20%;
+        width: 40%;
+        margin: 2% 0;
+    }
     .sub {
         margin-top: 8%;
     }
