--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -6,7 +6,7 @@ footer {
     padding-bottom: 2%;
     a {
         font-family: $thick;
-        color: #ABB3CE;
+        color: white;
         &:hover {
             text-decoration: none;
             color: #ABB3CE;
