--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -9,7 +9,7 @@ footer {
         color: white;
         &:hover {
             text-decoration: none;
-            color: #ABB3CE;
+            color:  #ff8064;
         }
     }
     .box {
