--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -65,6 +65,7 @@ $box: #1D3152;
         font-size: .80rem;
         text-align: left;
         line-height: 25px;
+        margin-bottom: 2em;
     }
 }
 
