--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -65,7 +65,7 @@ $box: #1D3152;
         font-size: .80rem;
         text-align: left;
         line-height: 25px;
-        margin-bottom: 2em;
+        margin-bottom: 3em;
     }
 }
 
@@ -164,6 +164,7 @@ $box: #1D3152;
         margin-top: 8%;
         text-align: left;
         color: $white;
+        height: 300px;
         .info {
             color: #ABB3CE;
         }
